--- a/server/home/templates/index.html
+++ b/server/home/templates/index.html
@@ -33,7 +33,7 @@
         <div class="form-horizontal">
             <div class="controls">
               <input type="text" id="searchTextField" placeholder="location">
-              <input type="text" id="inputLatidute" placeholder="latitude">
+              <input type="text" id="inputLatitude" placeholder="latitude">
               <input type="text" id="inputLongitude" placeholder="longitude">
             </div>
           </div>
