--- a/server/home/templates/index.html
+++ b/server/home/templates/index.html
@@ -8,6 +8,7 @@
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/js/map.js"></script>
     <script src="/static/js/event.js"></script>
+    <script src="/static/js/rescuers.js"></script>
     <script src="/static/js/base.js"></script>
     <style type="text/css">
         #map_canvas { margin-left: 20px; width: 70%; height: 700px; float: left }
