frontend: new icons

--- a/server/home/templates/index.html
+++ b/server/home/templates/index.html
@@ -21,7 +21,7 @@
         body {direction: rtl}
     </style>
     <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAa8eBlWw5aaOHDIoXSfk-zNjdsMNYlJAc&sensor=false&libraries=places">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAa8eBlWw5aaOHDIoXSfk-zNjdsMNYlJAc&sensor=false&libraries=places&v=3.exp">
     </script>
   </head>
   <body>
